# AutoTritonOp

./: .pre-commit-config.yaml  MANIFEST.in  README.md  ascend_triton_ops.py  build.sh  pyproject.toml  requirements.txt  setup.py  test_accuracy.py
.github/scripts/: check_line_length.py
.github/workflows/: archive-artifacts.yml  build-wheel.yml  pre-commit-check.yml
ops/: __init__.py  flash_attention.py  layer_norm.py  matmul.py  softmax.py  vector_add.py
tests/: test_ops.py
